[package]
name = "yuv-indexers"
description = "YUV Node's Bitcoin indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
yuv-types = { path = "../types", features = ["messages"] }
yuv-storage = { path = "../storage" }
event-bus = { path = "../event-bus" }
bitcoin-client = { path = "../bitcoin-client", features = ["mocks"] }

eyre = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tokio-util = { workspace = true }
bitcoin = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
mockall = "0.12.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = "1.18.0"
